fix(gui): copy mode list on initializing